<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="15dp"
    android:paddingBottom="25dp"
    android:textAlignment="textStart"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constraintCircleRadius="@dimen/cardview_default_elevation">

    <TextView
        android:id="@+id/tv_followers_fv"
        style="@style/DetailUserTextRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_right_text"
        android:text="@string/follower"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/img_detail_fv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_fv_na"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:text="@string/full_name"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_repos_fv"
        style="@style/DetailUserTextRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_right_text_repo"
        android:text="@string/counter"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_following_fv"
        style="@style/DetailUserTextRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_right_text_following"
        android:maxLines="1"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/tv_username_fv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_fv_na"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:text="username" />

    <TextView
        android:id="@+id/tv_location_fv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/btn_more"
        app:layout_constraintStart_toStartOf="@+id/tv_company_fv"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:text="location" />

    <TextView
        android:id="@+id/tv_company_fv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:text="@string/company"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_username_fv"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView4"
        style="@style/DetailUserTextLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_left_text"
        android:text="@string/follower"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_fv"
        app:layout_constraintStart_toEndOf="@+id/img_detail_fv"
        app:layout_constraintTop_toTopOf="@+id/img_detail_fv"
        tools:text="Followers" />

    <TextView
        android:id="@+id/textView5"
        style="@style/DetailUserTextLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_left_text"
        android:maxLines="1"
        android:text="@string/following"
        app:layout_constraintStart_toEndOf="@+id/img_detail_fv"
        app:layout_constraintTop_toTopOf="@+id/img_detail_fv" />

    <TextView
        android:id="@+id/textView6"
        style="@style/DetailUserTextLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_left_text"
        android:text="@string/repo"
        app:layout_constraintStart_toEndOf="@+id/img_detail_fv"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/name"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_person_24"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_fv_na"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_fv" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/username"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_account"
        app:layout_constraintEnd_toStartOf="@+id/tv_username_fv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/company"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_homework"
        app:layout_constraintEnd_toStartOf="@+id/tv_company_fv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/location"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toStartOf="@+id/tv_location_fv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:maxWidth="100dp"
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/more"
        android:textSize="12sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location_fv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_location_fv" />

</androidx.constraintlayout.widget.ConstraintLayout>

