<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_detail_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_header"
                app:layout_constraintBottom_toBottomOf="@+id/detail_company_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/background" />
            <ImageView
                android:id="@+id/detail_avatar_iv"
                android:layout_width="136dp"
                android:layout_height="136dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_login_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="5dp"
                android:maxLines="1"
                android:textSize="14sp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toTopOf="@+id/detail_location_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_avatar_iv"
                tools:text="User Name"
                app:drawableStartCompat="@drawable/ic_person_24" />

            <TextView
                android:id="@+id/detail_location_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawablePadding="5dp"
                android:maxLines="1"
                android:textSize="14sp"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toTopOf="@+id/detail_followers_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_avatar_iv"
                tools:text="Location Name"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/textView2"
                style="@style/DetailUserTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_left_text"
                android:text="@string/follower"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/detail_avatar_iv"
                tools:text="follower" />

            <TextView
                android:id="@+id/detail_followers_tv"
                style="@style/DetailUserTextRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_right_text"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:text="Followers Count" />

            <TextView
                android:id="@+id/textView"
                style="@style/DetailUserTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/bg_left_text"
                android:text="@string/following"
                app:layout_constraintBottom_toBottomOf="@+id/detail_avatar_iv"
                app:layout_constraintStart_toEndOf="@+id/detail_avatar_iv"
                tools:text="Following" />

            <TextView
                android:id="@+id/detail_following_tv"
                style="@style/DetailUserTextRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_right_text_following"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                tools:text="Count" />

            <TextView
                android:id="@+id/detail_full_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxWidth="136dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/detail_avatar_iv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_avatar_iv"
                tools:text="Full Name" />

            <TextView
                android:id="@+id/textView3"
                style="@style/DetailUserTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_left_text"
                android:text="@string/repo"
                app:layout_constraintBottom_toBottomOf="@+id/detail_following_tv"
                app:layout_constraintStart_toEndOf="@+id/detail_following_tv"
                app:layout_constraintTop_toTopOf="@+id/detail_following_tv" />

            <TextView
                android:id="@+id/detail_repo_tv"
                style="@style/DetailUserTextRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_right_text_repo"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Count" />

            <TextView
                android:id="@+id/detail_company_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/company"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_full_name_tv"
                tools:text="Company" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_ly"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_company_tv"
                app:tabIndicatorColor="@android:color/holo_green_light"
                />


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_ly"
                app:layout_constraintVertical_bias="1.0">

            </androidx.viewpager.widget.ViewPager>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_favorite"
                android:visibility="gone"
                android:contentDescription="@string/tab_favorite"
                android:id="@+id/fab"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
